duniverse/ppx_js_style.v0.14.0/test/number.mlt
let _ : _ = 10_00
[%%expect{|
Line _, characters _-_:
Error: The integer literal 10_00 contains underscores at suspicious positions
|}];;

let _ : _ = 10_000
[%%expect{|
|}];;

let _ : _ = 0x10_000
[%%expect{|
Line _, characters _-_:
Error: The integer literal 0x10_000 contains underscores at suspicious positions
|}];;

let _ : _ = 0x10_00
[%%expect{|
|}];;

let _ : _ = 0b10_000
[%%expect{|
Line _, characters _-_:
Error: The integer literal 0b10_000 contains underscores at suspicious positions
|}];;

let _ : _ = 0b10_00
[%%expect{|
|}];;

let _ : _ = 0o10_000
[%%expect{|
Line _, characters _-_:
Error: The integer literal 0o10_000 contains underscores at suspicious positions
|}];;

let _ : _ = 0o10_00
[%%expect{|
|}];;


let _ : _ = 012_00.013_121
[%%expect{|
Line _, characters _-_:
Error: The float literal 012_00.013_121 contains underscores at suspicious positions
|}];;


let _ : _ = 012_000.013_121
[%%expect{|
|}];;


let _ : _ = 012_000.13_121
[%%expect{|
Line _, characters _-_:
Error: The float literal 012_000.13_121 contains underscores at suspicious positions
|}];;


let _ : _ = 012_000.13_121
[%%expect{|
Line _, characters _-_:
Error: The float literal 012_000.13_121 contains underscores at suspicious positions
|}];;


let _ : _ = 012_000.013_121_e-123
[%%expect{|
|}];;


let _ : _ = 012_000.13_121e123
[%%expect{|
Line _, characters _-_:
Error: The float literal 012_000.13_121e123 contains underscores at suspicious positions
|}];;



let _ : _ = 0x12_000.013_121p-2
[%%expect{|
Line _, characters _-_:
Error: The float literal 0x12_000.013_121p-2 contains underscores at suspicious positions
|}];;

let _ : _ = 0x12_00.13_12p-2
[%%expect{|
|}];;


let _ : _ = 0x013_121_p-2
[%%expect{|
Line _, characters _-_:
Error: The float literal 0x013_121_p-2 contains underscores at suspicious positions
|}];;


let _ : _ = 0x12_000.13_121p4
[%%expect{|
Line _, characters _-_:
Error: The float literal 0x12_000.13_121p4 contains underscores at suspicious positions
|}];;

let _ : _ = 0x12.13p11
[%%expect{|
|}];;
